--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"http://xuanngo.com/cv-application",
   "name": "cv-project",
   "version": "0.1.0",
   "private": true,
@@ -41,6 +42,5 @@
   },
   "devDependencies": {
     "gh-pages": "^3.1.0"
-  },
-  "homepage":"http://xuanngo.com/cv-application"
+  }
 }
