--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://xuanngo.com/cv-application",
+  "homepage":"http://xuanngo10.github.io/cv-application",
   "name": "cv-project",
   "version": "0.1.0",
   "private": true,
